{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 48,
  "lineage": "85893af7-4e5e-0169-4d24-c893c40d40fa",
  "resources": [
    {
      "module": "module.jenkinsapp",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "module.jenkinsapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522708997688:subnet/subnet-06df0367ebc94ff4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.102.0/24",
            "default_for_az": false,
            "id": "subnet-06df0367ebc94ff4b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "522708997688",
            "state": "available",
            "tags": {
              "Name": "my-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-0aec82579257f768e"
          }
        }
      ]
    },
    {
      "module": "module.jenkinsapp",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-app",
      "provider": "module.jenkinsapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:522708997688:instance/i-0288ac3e561799267",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0288ac3e561799267",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "slacko-app-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0069f8bcd8b9fc034",
            "private_dns": "ip-10-0-102-187.ec2.internal",
            "private_ip": "10.0.102.187",
            "public_dns": "ec2-3-82-1-59.compute-1.amazonaws.com",
            "public_ip": "3.82.1.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-039304a1ce7a69e2e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06df0367ebc94ff4b",
            "tags": {
              "Name": "jenkins-app",
              "customer": "cliente1",
              "env": "prod",
              "project": "slack"
            },
            "tags_all": {
              "Name": "jenkins-app",
              "customer": "cliente1",
              "env": "prod",
              "project": "slack"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08d4473208de4fbe7"
            ]
          },
          "dependencies": [
            "module.jenkinsapp.aws_key_pair.jenkins-sshkey",
            "module.jenkinsapp.data.aws_ami.jenkins-app",
            "module.jenkinsapp.data.aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.jenkinsapp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-jenkins",
      "provider": "module.jenkinsapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522708997688:security-group/sg-021cc7e2fe7c4cf92",
            "description": "allow ssh and http port",
            "egress": [],
            "id": "sg-021cc7e2fe7c4cf92",
            "ingress": [],
            "name": "jenkins-sg-app",
            "name_prefix": "",
            "owner_id": "522708997688",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-sg-app",
              "customer": "cliente1",
              "env": "prod",
              "project": "slack"
            },
            "tags_all": {
              "Name": "jenkins-sg-app",
              "customer": "cliente1",
              "env": "prod",
              "project": "slack"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aec82579257f768e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.jenkinsapp",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-jenkins-egress-all",
      "provider": "module.jenkinsapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3350135937",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-021cc7e2fe7c4cf92",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkinsapp.aws_security_group.allow-jenkins"
          ]
        }
      ]
    },
    {
      "module": "module.jenkinsapp",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-jenkins-ingress-http",
      "provider": "module.jenkinsapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-3715032123",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-021cc7e2fe7c4cf92",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkinsapp.aws_security_group.allow-jenkins"
          ]
        }
      ]
    },
    {
      "module": "module.jenkinsapp",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-jenkins-ingress-ssh",
      "provider": "module.jenkinsapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3979879255",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-021cc7e2fe7c4cf92",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkinsapp.aws_security_group.allow-jenkins"
          ]
        }
      ]
    }
  ]
}